Practica_Examen_Ampliaciones/bin/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones main

   2  definiciones :
   3               | definiciones definicion

   4  definicion : variable
   5             | funcion

   6  funcion : DEF ID '(' parametros ')' ':' tipoReturn body

   7  main : DEF MAIN '(' ')' ':' VOID body

   8  body : '{' variables sentencias '}'
   9       | '{' '}'
  10       | '{' sentencias '}'
  11       | '{' variables '}'

  12  sentencias : sentencia
  13             | sentencias sentencia

  14  sentencia : RETURN expression ';'
  15            | while
  16            | print
  17            | input
  18            | if
  19            | ifSimple
  20            | invocation ';'
  21            | assignment

  22  invocation : ID '(' paramsInvocation ')'

  23  paramsInvocation : expressiones
  24                   |

  25  assignment : expression '=' expression ';'
  26             | expression AND_EQUALS expression ';'
  27             | expression OR_EQUALS expression ';'

  28  if : IF expression ':' sentencia ELSE sentencia
  29     | IF expression ':' sentencia ELSE '{' sentencias '}'
  30     | IF expression ':' '{' sentencias '}' ELSE sentencia
  31     | IF expression ':' '{' sentencias '}' ELSE '{' sentencias '}'

  32  ifSimple : IF expression ':' sentencia
  33           | IF expression ':' '{' sentencias '}'

  34  parametros : parametrosAUX
  35             |

  36  parametrosAUX : parametro
  37                | parametrosAUX ',' parametro

  38  parametro : ID ':' tipo

  39  variables : variable
  40            | variables variable

  41  variable : ident ':' tipoCompuesto ';'

  42  ident : ID
  43        | ident ',' ID

  44  tipo : INT
  45       | DOUBLE
  46       | CHAR

  47  tipoCompuesto : tipo
  48                | '[' INT_CONSTANT ']' tipoCompuesto
  49                | STRUCT '{' bodyStruct '}'

  50  tipoReturn : tipo
  51             | VOID

  52  bodyStruct : variablesStruct
  53             | bodyStruct variablesStruct

  54  variablesStruct : ident ':' tipoCompuesto ';'

  55  expressiones : expression
  56               | expressiones ',' expression

  57  expression : ID
  58             | expression '+' expression
  59             | expression '-' expression
  60             | expression '*' expression
  61             | expression '/' expression
  62             | expression '%' expression
  63             | expression '.' ID
  64             | '(' expression ')'
  65             | expression '[' expression ']'
  66             | '!' expression
  67             | '-' expression
  68             | expression '>' expression
  69             | expression '<' expression
  70             | expression DISTINTO expression
  71             | expression MAYORIGUAL expression
  72             | expression MENORIGUAL expression
  73             | expression EQUIVALENTE expression
  74             | expression AND expression
  75             | expression OR expression
  76             | expression AND_EQUALS expression
  77             | expression OR_EQUALS expression
  78             | REAL_CONSTANT
  79             | INT_CONSTANT
  80             | CHAR_CONSTANT
  81             | cast
  82             | invocation

  83  cast : '(' tipo ')' expression

  84  while : WHILE expression ':' '{' sentencias '}'

  85  print : PRINT expressiones ';'

  86  input : INPUT expressiones ';'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . main  (1)
	definiciones : definiciones . definicion  (3)

	ID  shift 3
	DEF  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	variable  goto 7
	funcion  goto 8
	ident  goto 9


state 3
	ident : ID .  (42)

	.  reduce 42


state 4
	funcion : DEF . ID '(' parametros ')' ':' tipoReturn body  (6)
	main : DEF . MAIN '(' ')' ':' VOID body  (7)

	ID  shift 10
	MAIN  shift 11
	.  error


state 5
	programa : definiciones main .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : variable .  (4)

	.  reduce 4


state 8
	definicion : funcion .  (5)

	.  reduce 5


state 9
	variable : ident . ':' tipoCompuesto ';'  (41)
	ident : ident . ',' ID  (43)

	':'  shift 12
	','  shift 13
	.  error


state 10
	funcion : DEF ID . '(' parametros ')' ':' tipoReturn body  (6)

	'('  shift 14
	.  error


state 11
	main : DEF MAIN . '(' ')' ':' VOID body  (7)

	'('  shift 15
	.  error


state 12
	variable : ident ':' . tipoCompuesto ';'  (41)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 22


state 13
	ident : ident ',' . ID  (43)

	ID  shift 23
	.  error


state 14
	funcion : DEF ID '(' . parametros ')' ':' tipoReturn body  (6)
	parametros : .  (35)

	ID  shift 24
	')'  reduce 35

	parametros  goto 25
	parametrosAUX  goto 26
	parametro  goto 27


state 15
	main : DEF MAIN '(' . ')' ':' VOID body  (7)

	')'  shift 28
	.  error


state 16
	tipo : INT .  (44)

	.  reduce 44


state 17
	tipo : DOUBLE .  (45)

	.  reduce 45


state 18
	tipo : CHAR .  (46)

	.  reduce 46


state 19
	tipoCompuesto : STRUCT . '{' bodyStruct '}'  (49)

	'{'  shift 29
	.  error


state 20
	tipoCompuesto : '[' . INT_CONSTANT ']' tipoCompuesto  (48)

	INT_CONSTANT  shift 30
	.  error


state 21
	tipoCompuesto : tipo .  (47)

	.  reduce 47


state 22
	variable : ident ':' tipoCompuesto . ';'  (41)

	';'  shift 31
	.  error


state 23
	ident : ident ',' ID .  (43)

	.  reduce 43


state 24
	parametro : ID . ':' tipo  (38)

	':'  shift 32
	.  error


state 25
	funcion : DEF ID '(' parametros . ')' ':' tipoReturn body  (6)

	')'  shift 33
	.  error


state 26
	parametros : parametrosAUX .  (34)
	parametrosAUX : parametrosAUX . ',' parametro  (37)

	','  shift 34
	')'  reduce 34


state 27
	parametrosAUX : parametro .  (36)

	.  reduce 36


state 28
	main : DEF MAIN '(' ')' . ':' VOID body  (7)

	':'  shift 35
	.  error


state 29
	tipoCompuesto : STRUCT '{' . bodyStruct '}'  (49)

	ID  shift 3
	.  error

	ident  goto 36
	bodyStruct  goto 37
	variablesStruct  goto 38


state 30
	tipoCompuesto : '[' INT_CONSTANT . ']' tipoCompuesto  (48)

	']'  shift 39
	.  error


state 31
	variable : ident ':' tipoCompuesto ';' .  (41)

	.  reduce 41


state 32
	parametro : ID ':' . tipo  (38)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	.  error

	tipo  goto 40


state 33
	funcion : DEF ID '(' parametros ')' . ':' tipoReturn body  (6)

	':'  shift 41
	.  error


state 34
	parametrosAUX : parametrosAUX ',' . parametro  (37)

	ID  shift 24
	.  error

	parametro  goto 42


state 35
	main : DEF MAIN '(' ')' ':' . VOID body  (7)

	VOID  shift 43
	.  error


state 36
	ident : ident . ',' ID  (43)
	variablesStruct : ident . ':' tipoCompuesto ';'  (54)

	':'  shift 44
	','  shift 13
	.  error


state 37
	tipoCompuesto : STRUCT '{' bodyStruct . '}'  (49)
	bodyStruct : bodyStruct . variablesStruct  (53)

	ID  shift 3
	'}'  shift 45
	.  error

	ident  goto 36
	variablesStruct  goto 46


state 38
	bodyStruct : variablesStruct .  (52)

	.  reduce 52


state 39
	tipoCompuesto : '[' INT_CONSTANT ']' . tipoCompuesto  (48)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 47


state 40
	parametro : ID ':' tipo .  (38)

	.  reduce 38


state 41
	funcion : DEF ID '(' parametros ')' ':' . tipoReturn body  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	VOID  shift 48
	.  error

	tipoReturn  goto 49
	tipo  goto 50


state 42
	parametrosAUX : parametrosAUX ',' parametro .  (37)

	.  reduce 37


state 43
	main : DEF MAIN '(' ')' ':' VOID . body  (7)

	'{'  shift 51
	.  error

	body  goto 52


state 44
	variablesStruct : ident ':' . tipoCompuesto ';'  (54)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 53


state 45
	tipoCompuesto : STRUCT '{' bodyStruct '}' .  (49)

	.  reduce 49


state 46
	bodyStruct : bodyStruct variablesStruct .  (53)

	.  reduce 53


state 47
	tipoCompuesto : '[' INT_CONSTANT ']' tipoCompuesto .  (48)

	.  reduce 48


state 48
	tipoReturn : VOID .  (51)

	.  reduce 51


state 49
	funcion : DEF ID '(' parametros ')' ':' tipoReturn . body  (6)

	'{'  shift 51
	.  error

	body  goto 54


state 50
	tipoReturn : tipo .  (50)

	.  reduce 50


state 51
	body : '{' . variables sentencias '}'  (8)
	body : '{' . '}'  (9)
	body : '{' . sentencias '}'  (10)
	body : '{' . variables '}'  (11)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 67
	.  error

	variable  goto 68
	variables  goto 69
	sentencias  goto 70
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocation  goto 78
	assignment  goto 79
	ident  goto 9
	cast  goto 80


state 52
	main : DEF MAIN '(' ')' ':' VOID body .  (7)

	.  reduce 7


state 53
	variablesStruct : ident ':' tipoCompuesto . ';'  (54)

	';'  shift 81
	.  error


state 54
	funcion : DEF ID '(' parametros ')' ':' tipoReturn body .  (6)

	.  reduce 6


state 55
	expression : INT_CONSTANT .  (79)

	.  reduce 79


state 56
	expression : REAL_CONSTANT .  (78)

	.  reduce 78


state 57
	invocation : ID . '(' paramsInvocation ')'  (22)
	ident : ID .  (42)
	expression : ID .  (57)

	'('  shift 82
	MENORIGUAL  reduce 57
	MAYORIGUAL  reduce 57
	EQUIVALENTE  reduce 57
	DISTINTO  reduce 57
	OR  reduce 57
	AND  reduce 57
	AND_EQUALS  reduce 57
	OR_EQUALS  reduce 57
	'='  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'.'  reduce 57
	'['  reduce 57
	':'  reduce 42
	','  reduce 42


state 58
	expression : CHAR_CONSTANT .  (80)

	.  reduce 80


state 59
	input : INPUT . expressiones ';'  (86)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 84
	invocation  goto 85
	expressiones  goto 86
	cast  goto 80


state 60
	print : PRINT . expressiones ';'  (85)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 84
	invocation  goto 85
	expressiones  goto 87
	cast  goto 80


state 61
	while : WHILE . expression ':' '{' sentencias '}'  (84)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 88
	invocation  goto 85
	cast  goto 80


state 62
	if : IF . expression ':' sentencia ELSE sentencia  (28)
	if : IF . expression ':' sentencia ELSE '{' sentencias '}'  (29)
	if : IF . expression ':' '{' sentencias '}' ELSE sentencia  (30)
	if : IF . expression ':' '{' sentencias '}' ELSE '{' sentencias '}'  (31)
	ifSimple : IF . expression ':' sentencia  (32)
	ifSimple : IF . expression ':' '{' sentencias '}'  (33)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 89
	invocation  goto 85
	cast  goto 80


state 63
	sentencia : RETURN . expression ';'  (14)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 90
	invocation  goto 85
	cast  goto 80


state 64
	expression : '-' . expression  (67)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 91
	invocation  goto 85
	cast  goto 80


state 65
	expression : '!' . expression  (66)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 92
	invocation  goto 85
	cast  goto 80


state 66
	expression : '(' . expression ')'  (64)
	cast : '(' . tipo ')' expression  (83)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 93
	invocation  goto 85
	tipo  goto 94
	cast  goto 80


state 67
	body : '{' '}' .  (9)

	.  reduce 9


state 68
	variables : variable .  (39)

	.  reduce 39


state 69
	body : '{' variables . sentencias '}'  (8)
	body : '{' variables . '}'  (11)
	variables : variables . variable  (40)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 95
	.  error

	variable  goto 96
	sentencias  goto 97
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocation  goto 78
	assignment  goto 79
	ident  goto 9
	cast  goto 80


state 70
	body : '{' sentencias . '}'  (10)
	sentencias : sentencias . sentencia  (13)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 83
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 98
	.  error

	sentencia  goto 99
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocation  goto 78
	assignment  goto 79
	cast  goto 80


state 71
	sentencias : sentencia .  (12)

	.  reduce 12


state 72
	assignment : expression . '=' expression ';'  (25)
	assignment : expression . AND_EQUALS expression ';'  (26)
	assignment : expression . OR_EQUALS expression ';'  (27)
	expression : expression . '+' expression  (58)
	expression : expression . '-' expression  (59)
	expression : expression . '*' expression  (60)
	expression : expression . '/' expression  (61)
	expression : expression . '%' expression  (62)
	expression : expression . '.' ID  (63)
	expression : expression . '[' expression ']'  (65)
	expression : expression . '>' expression  (68)
	expression : expression . '<' expression  (69)
	expression : expression . DISTINTO expression  (70)
	expression : expression . MAYORIGUAL expression  (71)
	expression : expression . MENORIGUAL expression  (72)
	expression : expression . EQUIVALENTE expression  (73)
	expression : expression . AND expression  (74)
	expression : expression . OR expression  (75)
	expression : expression . AND_EQUALS expression  (76)
	expression : expression . OR_EQUALS expression  (77)

	MENORIGUAL  shift 100
	MAYORIGUAL  shift 101
	EQUIVALENTE  shift 102
	DISTINTO  shift 103
	OR  shift 104
	AND  shift 105
	AND_EQUALS  shift 106
	OR_EQUALS  shift 107
	'='  shift 108
	'>'  shift 109
	'<'  shift 110
	'+'  shift 111
	'-'  shift 112
	'*'  shift 113
	'/'  shift 114
	'%'  shift 115
	'.'  shift 116
	'['  shift 117
	.  error


state 73
	sentencia : while .  (15)

	.  reduce 15


state 74
	sentencia : print .  (16)

	.  reduce 16


state 75
	sentencia : input .  (17)

	.  reduce 17


state 76
	sentencia : if .  (18)

	.  reduce 18


state 77
	sentencia : ifSimple .  (19)

	.  reduce 19


state 78
	sentencia : invocation . ';'  (20)
	expression : invocation .  (82)

	';'  shift 118
	MENORIGUAL  reduce 82
	MAYORIGUAL  reduce 82
	EQUIVALENTE  reduce 82
	DISTINTO  reduce 82
	OR  reduce 82
	AND  reduce 82
	AND_EQUALS  reduce 82
	OR_EQUALS  reduce 82
	'='  reduce 82
	'>'  reduce 82
	'<'  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	'.'  reduce 82
	'['  reduce 82


state 79
	sentencia : assignment .  (21)

	.  reduce 21

